--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "angular-ui-router": "^0.4.2",
     "angular": "^1.6.3",
-    "bootstrap": "^3.3.7",
-    "AngularDevise": "angular-devise#^1.3.0"
+    "bootstrap": "^3.3.7"
   }
 }
